# fgpt

./: .gitignore  Makefile  README.md  docker-compose.yml
cloudbuild/: build-api.cloudbuild.yaml  build-db.cloudbuild.yaml  build-job-runner.cloudbuild.yaml  build-ml.cloudbuild.yaml  build-springtime.cloudbuild.yaml  deploy-db.cloudbuild.yaml  update-jobs.sh
db/: Dockerfile  README.md
db/db/migrations/: 20230427142358_transcript_href.sql  20230501200949_raw_chunk.sql  20230505221649_files.sql  20230512174527_users.sql  20230513000543_projects.sql  20230517025424_delete_files.sql  20230517025453_new_files.sql  20230517202405_add_new_file_reference.sql  20230519161739_task_table.sql  20230521215046_file_org_id.sql  20230521233313_file_hash.sql  20230522145338_processed_file.sql  20230522180338_delete_old_tables.sql  20230522185244_text_chunk.sql  20230523000234_new_text_index.sql  20230523140740_text_chunk_idx.sql  20230524051631_text_chunk_unit.sql  20230525034304_fix_unique_problem.sql  20230526162724_file_metadata.sql  20230531034921_report.sql  20230531034922_analysis.sql  20230605022045_chat.sql  20230606042357_drop_uniq_index.sql  20230606230518_chat_alter.sql  20230607200140_chat_context.sql  (+50 more)
iac/: .terraform.lock.hcl  main.tf  variables.tf
python/api/: pyproject.toml
python/springtime/: Dockerfile  pyproject.toml
python/springtime/springtime/: main.py  settings.py  telemetry.py  tracer.py
python/springtime/springtime/excel/: table_extractor.py
python/springtime/springtime/llm/: foo.py  generate_title.py  llm-output.xml  metrics-and-entities.xml  ml.py  neo4j.py  pinecone.py  prompts.py  questions-and-summaries.xml  table_analyzer.py
python/springtime/springtime/models/: chat.py  open_ai.py
python/springtime/springtime/object_store/: object_store.py
python/springtime/springtime/routers/: chat_router.py  embeddings_router.py  ml_router.py  pdf_router.py  prompt_router.py  report_router.py  table_router.py  text_router.py  token_length_service.py  vector_router.py
python/springtime/springtime/services/: analysis_service.py  anthropic_client.py  chat_service.py  embeddings_service.py  excel_analyzer.py  format_sheet.py  hfm_service.py  html.py  long_form_report_service.py  pinecone.py  prompt.py  prompt_service.py  prompts.py  report_service.py  scan_service.py  sheet_processor.py  table_analyzer.py  thumbnail_service.py  token.py  vector_service.py
python/springtime/springtime/tests/: conftest.py  test_langchain.py  test_pinecone.py  test_table_analyzer.py  test_table_extractor.py
python/springtime/springtime/tests/data/: american-cim-chunk-1.txt  american_cim_text.txt  dummy-extracted.xlsx  wet-noses-financials.xlsx  wet-noses-sales-and-margin.xlsx
python/springtime/springtime/tests/router/: test_pdf_router.py
python/springtime/springtime/tests/services/: test_analysis_service.py  test_anthropic_client.py  test_excel_analyzer.py  test_html.py  test_long_form_report_service.py  test_prompt_service.py  test_report_service.py  test_scan_service.py  test_sheet_processor.py  test_table_analyzer.py  test_table_extractor.py  test_thumbnail_service.py
python/springtime/springtime/utils/: chunks.py
typescript/: .dockerignore  .gcloudignore  .gitignore  Makefile  README.md  package.json
