[tool.pdm]

[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Nasr Maswood", email = "nasr@songbirdcare.com"},
]
dependencies = [
    "fastapi>=0.95.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
