[tool.poetry]
name = "springtime"
version = "0.1.0"
description = ""
authors = ["Nasr Maswood <nasrmaswood@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
autopep8 = "^2.0.2"
python-dotenv = "^1.0.0"
langchain = "v0.0.147"
openai = "^0.27.5"
pytest = "^7.3.1"
google-search-results = "^2.4.2"
pinecone-client = "^2.2.1"
neo4j = "^5.8.0"
py2neo = "^2021.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "springtime.main:start"
