[tool.poetry]
name = "springtime"
version = "0.1.0"
description = ""
authors = ["Nasr Maswood <nasrmaswood@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
autopep8 = "^2.0.2"
python-dotenv = "^1.0.0"
langchain = "v0.0.147"
openai = "^0.27.5"
pytest = "^7.3.1"
pinecone-client = "^2.2.1"
retry = "^0.9.2"
tiktoken = "^0.4.0"
tabula-py = "^2.7.0"
xlsxwriter = "^3.1.2"
google-cloud-storage = "^2.9.0"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.271"
black = "^23.3.0"


[tool.ruff]
ignore = ["F841"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "springtime.main:start"
